deployment/Kubernetes/overlays/general/staging/enroll/enroll-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enroll-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-staging"
